--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,23 +29,26 @@ jobs:
       - name: Bump tag locally
         run: git tag ${{ steps.bumpTag.outputs.new_tag }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to GHCR
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push Landing Page Docker image
         uses: docker/build-push-action@v6
         with:
+          platforms: linux/amd64,linux/arm64
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ github.repository }}:${{ steps.bumpTag.outputs.new_tag }}
-            ${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ steps.bumpTag.outputs.new_tag }}
+            ghcr.io/${{ github.repository }}:latest
