--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,6 +49,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          provenance: false
           tags: |
             ghcr.io/${{ github.repository }}:${{ steps.bumpTag.outputs.new_tag }}
             ghcr.io/${{ github.repository }}:latest
