--- a/packages/py3-weasyprint/APKBUILD
+++ b/packages/py3-weasyprint/APKBUILD
@@ -4,12 +4,12 @@
 pkgname=py3-weasyprint
 #_pkgreal is used by apkbuild-pypi to find modules at PyPI
 _pkgreal=weasyprint
-pkgver=66.0
+pkgver=67.0
 pkgrel=0
 pkgdesc="The Awesome Document Factory"
 provides=""
 replaces=""
-url="http://packages.python.org/pypi/weasyprint"
+url="https://pypi.org/project/weasyprint/"
 arch="noarch"
 license="BSD-3-Clause"
 depends="python3 py3-pydyf py3-cffi py3-tinyhtml5 py3-tinycss2 py3-cssselect2 py3-pyphen py3-pillow py3-fonttools py3-brotli py3-zopfli pango"
@@ -32,5 +32,5 @@ package() {
 }
 
 sha512sums="
-850996c6934156f4d4fca12cc052a8346b85aeadf1a3d99763e20a6ddabd2b93a39983615990e0e680a942c63c09563effa9b66abc5bf0c368963737ddf66264  weasyprint-66.0.tar.gz
+e0241507e57aaee18e0f6ae469de12df4ae4930a5e9f7e9ef428fbd6eb59efe40598423e6ce6de5c12d088439d30ec562cc28f342c7720e742ab16d8110380f1  weasyprint-67.0.tar.gz
 "
