Add options to disable checks for py3-tinycss2 and py3-weasyprint

--- a/packages/py3-tinycss2/APKBUILD
+++ b/packages/py3-tinycss2/APKBUILD
@@ -6,6 +6,7 @@ pkgdesc="Low-level CSS parser for Python"
 url="https://pypi.org/project/tinycss2/"
 arch="noarch"
 license="BSD-3-Clause"
+options="!check"
 depends="py3-webencodings"
 checkdepends="py3-pytest"
 makedepends="py3-gpep517 py3-flit-core"
