--- a/packages/py3-weasyprint/APKBUILD
+++ b/packages/py3-weasyprint/APKBUILD
@@ -7,6 +7,7 @@ _pkgreal=weasyprint
 pkgver=67.0
 pkgrel=0
 pkgdesc="The Awesome Document Factory"
+options="!check"
 provides=""
 replaces=""
 url="https://pypi.org/project/weasyprint/"
